[package]
name = "affinitree"
version = "0.23.0"
description = "A crate to distill faithful decision trees out of neural networks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Conturing/affinitree"
documentation = "https://docs.rs/affinitree"
homepage = "https://github.com/Conturing/affinitree"
keywords = ["decision_trees", "explainable_AI", "machine_learning", "model_distillation"]
categories = ["data-structures", "mathematics", "science"]
exclude = ["/.github/*"]
edition = "2021"
rust-version = "1.64"

[dependencies]
approx = "0.5.1"
average = "0.15.1"
console = "0.15.8"
csv = "1.3.0"
delegate = "0.13.1"
doc-comment = "0.3.3"
float-ord = "0.3.2"
highs = {version = "1.6.1", optional = true }
indicatif = "0.17.8"
itertools = "0.13.0"
log = { version = "0.4.22" }
minilp = {version = "0.2.2", optional = true }
ndarray = {version = "0.15.6", features = ["approx-0_5"] }
ndarray-npy = "0.8.1"
num-traits = "0.2.19"
overload = "0.1.1"
rand = "0.8.5"
regex = "1.9.6"
slab = { version = "0.4.9" }
serde = { version = "1.0", features = ["derive"] }
take_mut = "0.2.2"
thiserror = "1.0.65"

[dev-dependencies]
assertables = { version = "9.1.0" }
criterion = "0.5.1"
env_logger = "0.10.2"
ndarray-rand = "0.14.0"

[features]
default = ["minilp"]
minilp = ["dep:minilp"]
highs = ["dep:highs"]

[[bench]]
name = "distillation"
harness = false

[profile.bench]
lto = true
codegen-units = 1
# panic = "abort"
debug = true
strip = false

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"
debug = true
strip = false
